tests/test_compile/cases/temp_field.stderr
error[E0063]: missing field `field_a` in initializer of `Test1`
 --> $DIR/temp_field.rs:4:10
  |
4 | #[derive(DekuRead, DekuWrite)]
  |          ^^^^^^^^ missing `field_a`
  |
  = note: this error originates in the derive macro `DekuRead` (in Nightly builds, run with -Z macro-backtrace for more info)

error: pattern requires `..` due to inaccessible fields
 --> tests/test_compile/cases/temp_field.rs:4:20
  |
4 | #[derive(DekuRead, DekuWrite)]
  |                    ^^^^^^^^^
  |
  = note: this error originates in the derive macro `DekuWrite` (in Nightly builds, run with -Z macro-backtrace for more info)
help: ignore the inaccessible and unused fields
  |
4 | #[derive(DekuRead, DekuWrite { .. } {
  |                              ~~~~~~
